--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -1,19 +1,17 @@
 # ~/.config/starship.toml
 
-# -- Minimal, colorful, and elegant PowerShell theme --
-
 add_newline = false
 format = """
-[](color_blue)\
+[](color_blue)\
 $directory\
-[](bg:color_purple fg:color_blue)\
+[](bg:color_purple fg:color_blue)\
 $git_branch\
 $git_status\
-[](fg:color_purple bg:color_orange)\
+[](fg:color_purple bg:color_orange)\
 $kubernetes\
-[](fg:color_orange bg:color_bg)\
+[](fg:color_orange bg:color_bg)\
 $time\
-[ ](fg:color_bg)\
+[ ](fg:color_bg)
 $character
 """
 
