--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -4,7 +4,10 @@ add_newline = false
 format = """
 [](color_blue)\
 $directory\
-[](bg:color_purple fg:color_blue)$git_branch$git_status[](fg:color_purple bg:color_orange)\
+[](bg:color_purple fg:color_blue)\
+$git_branch\
+$git_status\
+[](fg:color_purple bg:color_orange)\
 $kubernetes\
 [](fg:color_orange bg:color_bg)\
 $time\
