--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -1,6 +1,9 @@
+"$schema" = 'https://starship.rs/config-schema.json'
 # ~/.config/starship.toml
 
-add_newline = false
+# Inserts a blank line between shell prompts
+add_newline = true
+
 format = """
 [](color_blue)\
 $directory\
@@ -59,6 +62,6 @@ format = " 🕒 [$time]($style)"
 
 # Prompt character
 [character]
-success_symbol = "[❯](bold green)"
-error_symbol   = "[❯](bold red)"
+success_symbol = "[➜](bold green)"
+error_symbol   = "[➜](bold red)"
 vicmd_symbol   = "[❮](bold yellow)"
