--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -14,8 +14,7 @@ $git_status\
 $kubernetes\
 [](fg:color_orange bg:color_bg)\
 $time\
-[ ](fg:color_bg)
-$character
+[](fg:color_bg)$character
 """
 
 # Define custom palette
