--- a/run_once_install_starship.sh.tmpl
+++ b/run_once_install_starship.sh.tmpl
@@ -36,9 +36,7 @@ BASHRC="$HOME/.bashrc"
 
 # Create a separate section in .bashrc
 
-ensure_line "\n" "$BASHRC"
-ensure_line "### chezmoi edit ###" "$BASHRC"
-ensure_line "" "$BASHRC"
+ensure_line "\n\n### chezmoi edit ###\n" "$BASHRC"
 
 # Put ~/.local/bin on PATH for future bash shells (before starship init)
 ensure_line 'export PATH="$HOME/.local/bin:$PATH"' "$BASHRC"
