--- a/home/private_AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/symlink_settings.json.tmpl
+++ b/home/private_AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/symlink_settings.json.tmpl
@@ -1,1 +1,1 @@
-{{ .chezmoi.homeDir }}/.dotfiles/resources/settings.json
+{{ .chezmoi.homeDir }}/AppData/Local/Microsoft/Windows Terminal/settings.json
