--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -26,7 +26,7 @@ edit:
   args: ["--wait","--reuse-window"]
 
 data:
-  ephemeral = {{ $ephemeral }}
-  headless = {{ $headless }}
-  hostname = {{ $hostname | quote }}
-  osid = {{ $osID | quote }}
+  ephemeral: {{ $ephemeral }}
+  headless: {{ $headless }}
+  hostname: {{ $hostname | quote }}
+  osid: {{ $osID | quote }}
