Update .chezmoiscripts/linux/install-op.sh Change attributes of .chezmoiscripts/windows/remove-w11-bloat.ps1 Change attributes of .chezmoiscripts/windows/remove-wsb.ps1

--- a/home/.chezmoiscripts/windows/run_onchange_remove-wsb.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/run_onchange_remove-wsb.ps1.tmpl
@@ -1,3 +1,5 @@
+{{ if and (eq .osid "windows") (not .ephemeral) (not .headless) -}}
+
 # --- Self-elevate ---
 if (-not ([Security.Principal.WindowsPrincipal] [Security.Principal.WindowsIdentity]::GetCurrent()
   ).IsInRole([Security.Principal.WindowsBuiltInRole] 'Administrator')) {
@@ -28,3 +30,5 @@ while ($true) {
     }
     Start-Sleep -Milliseconds 100
 }
+
+{{- end -}}
