Fix formatting in cleanup function and adjust template end tag

--- a/home/.chezmoiscripts/linux/run_onchange_after_10-configure-vscode.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_10-configure-vscode.sh.tmpl
@@ -147,7 +147,9 @@ main() {
     log SUCCESS "========================================"
     log SUCCESS "COMPLETED: $script_name"
     log SUCCESS "========================================"
-}# Cleanup function
+}
+
+# Cleanup function
 cleanup() {
     local script_name=$(basename "$0")
     log INFO "Cleanup completed"
@@ -185,4 +187,4 @@ trap cleanup EXIT
 # Execute main function
 main "$@"
 
-{{- end -}}
+{{- end }}
