--- a/home/exact_dot_config/starship.toml.tmpl
+++ b/home/exact_dot_config/starship.toml.tmpl
@@ -3,7 +3,7 @@
 {{- $isDarwin  := eq .chezmoi.os "darwin"  -}}
 {{- $isLinux   := eq .chezmoi.os "linux"   -}}
 
-{{- $profile := "pure" -}}
+{{- $profile := "gruvbox-rainbow" -}}
 
 # Windows: compact; Linux/macOS: keep a blank line (nice for multi-line outputs)
 {{- if $isWindows }}
