--- a/home/exact_dot_config/starship.toml.tmpl
+++ b/home/exact_dot_config/starship.toml.tmpl
@@ -243,7 +243,7 @@ vimcmd_symbol = '[](bold fg:color_green)'
 vimcmd_replace_one_symbol = '[](bold fg:color_purple)'
 vimcmd_replace_symbol = '[](bold fg:color_purple)'
 vimcmd_visual_symbol = '[](bold fg:color_yellow)'
-{{- else }}
+{{- else if eq $profile "pure" }}
 format = """
 $username\
 $hostname\
