--- a/home/symlink_dot_bashrc.tmpl
+++ b/home/symlink_dot_bashrc.tmpl
@@ -1,3 +1,3 @@
-{{ if and (eq .osid "linux-ubuntu") (not .ephemeral) (not .headless) -}}
+{{ if and (eq .osid "linux-ubuntu") (not .headless) -}}
 .bash/bashrc
 {{- end }}
