Disabled removal of Microsoft Yourphone

--- a/home/.chezmoiscripts/windows/run_onchange_after_10-remove-w11-bloat.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/run_onchange_after_10-remove-w11-bloat.ps1.tmpl
@@ -207,7 +207,7 @@ try {
     }
 
     # Pattern-based cleanup
-    $junkPattern = '(?i)phone|disney|skype|spotify|groove|solitaire|zune|mixedreality|tiktok|adobe|prime|soundrecorder|bingweather|3dviewer'
+    $junkPattern = '(?i)disney|skype|spotify|groove|solitaire|zune|mixedreality|tiktok|adobe|prime|soundrecorder|bingweather|3dviewer'
 
     Write-Log "Removing pattern-matched apps for current user..." -Level Info
     Remove-AppxMatching -Pattern $junkPattern
