--- a/home/private_dot_ssh/private_config.tmpl
+++ b/home/private_dot_ssh/private_config.tmpl
@@ -5,7 +5,8 @@ Include ~/.ssh/1Password/config
 LogLevel ERROR
 
 Host *
-  AddKeysToAgent yes
+  PubkeyAuthentication no
+  StrictHostKeyChecking accept-new
   IdentityFile ~/.ssh/id_ed25519
   IdentityFile ~/.ssh/id_rsa
 
