Update .chezmoiscripts/windows/10-remove-w11-bloat.ps1 Add .chezmoiscripts/windows/15-install-vscode.ps1

--- a/home/.chezmoiscripts/windows/run_onchange_after_10-remove-w11-bloat.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/run_onchange_after_10-remove-w11-bloat.ps1.tmpl
@@ -17,7 +17,7 @@
 
 {{ if and (eq .osid "windows") (not .ephemeral) (not .headless) -}}
 
-[CmdletBinding(SupportsShouldProcess)]
+[CmdletBinding()]
 param()
 
 # --- Self-elevate ---
@@ -62,10 +62,6 @@ function Test-Prerequisites {
 
     Write-Log "Checking prerequisites..." -Level Info
 
-    if (-not ([Security.Principal.WindowsPrincipal] [Security.Principal.WindowsIdentity]::GetCurrent()).IsInRole([Security.Principal.WindowsBuiltInRole] "Administrator")) {
-        Write-Log "This script requires administrator privileges." -Level Warning
-        throw "Administrator privileges required."
-    }
 
     Write-Log "Prerequisites check completed." -Level Success
 }
